tests/syntax_error/unnecessary_quote_escape_byte.jou
def foo() -> void:
    x = '\"'  # Error: double quotes shouldn't be escaped in byte literals
